# h5i-db

./: .gitignore  Cargo.toml  DESIGN.md  DESIGN_CLAUDE.md  DESIGN_CODEX.md  README.md  ROADMAP.md  ROADMAP_PERFORMANCE.md  SKILL.md  deny.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: RESULTS.md  check_performance_report.py  compare_baselines.py  performance_workload.json  predicate_cache_scenario.py  run_performance_workload.py  test_performance_workload.py
compat/object-store-0.13/: Cargo.toml
compat/object-store-0.13/src/: lib.rs
crates/h5i-db-bench/: Cargo.toml  polars_compare.py
crates/h5i-db-bench/src/: main.rs
crates/h5i-db-cli/: Cargo.toml
crates/h5i-db-cli/src/: ingest.rs  main.rs  output.rs
crates/h5i-db-cli/tests/: cli.rs  lifecycle.rs
crates/h5i-db-core/: Cargo.toml
crates/h5i-db-core/src/: backend.rs  backend_object.rs  catalog.rs  data_policy.rs  database.rs  error.rs  evolution.rs  incremental.rs  layout.rs  lib.rs  manifest.rs  plan.rs  policy.rs  retention.rs  segment.rs  snapshot.rs  spec.rs  tail.rs  transaction.rs  util.rs
crates/h5i-db-core/tests/: durability.rs  edge_cases.rs  format_compat.rs  integration.rs  plans.rs  roadmap_features.rs
crates/h5i-db-core/tests/fixtures/: generate-golden.sh
crates/h5i-db-core/tests/fixtures/golden-v1/: FORMAT
crates/h5i-db-core/tests/fixtures/golden-v1/tables/3cf9c66a-e413-4733-8f21-60e7482410b4/: HEAD
crates/h5i-db-core/tests/fixtures/golden-v1/tables/3cf9c66a-e413-4733-8f21-60e7482410b4/manifests/: 000000000000.json  000000000001.json
crates/h5i-db-core/tests/fixtures/golden-v1/tables/3cf9c66a-e413-4733-8f21-60e7482410b4/segments/: f236f2bb-55c7-44e2-9bef-2d20d6e64c25.parquet
crates/h5i-db-core/tests/fixtures/golden-v1/tables/3cf9c66a-e413-4733-8f21-60e7482410b4/spec/: 00000001.json
crates/h5i-db-core/tests/fixtures/golden-v1/tables/701147a8-f7e7-4998-91f2-7cb94fdf2252/: HEAD
crates/h5i-db-core/tests/fixtures/golden-v1/tables/701147a8-f7e7-4998-91f2-7cb94fdf2252/manifests/: 000000000000.json  000000000001.json  000000000002.json  000000000003.json
crates/h5i-db-core/tests/fixtures/golden-v1/tables/701147a8-f7e7-4998-91f2-7cb94fdf2252/plans/: 905438df-9f98-4a82-9ba0-1d7718a0e8b6.json
crates/h5i-db-core/tests/fixtures/golden-v1/tables/701147a8-f7e7-4998-91f2-7cb94fdf2252/segments/: 0cc8fbf6-145e-4fff-94ef-bdc680497319.parquet  60e9ad30-70d4-4c08-805c-85c6ee8ad6df.parquet  88a90cb7-2114-4796-bbf1-1e7811d407a7.parquet  dcaacaa5-5e82-4886-a8e1-a893694f09af.parquet
crates/h5i-db-core/tests/fixtures/golden-v1/tables/701147a8-f7e7-4998-91f2-7cb94fdf2252/spec/: 00000001.json
crates/h5i-db-observability/: Cargo.toml
crates/h5i-db-observability/src/: lib.rs
crates/h5i-db-python/: Cargo.toml  README.md  pyproject.toml
crates/h5i-db-python/python/h5i_db/: __init__.py
crates/h5i-db-python/python/tests/: test_bindings.py
crates/h5i-db-python/src/: lib.rs
crates/h5i-db-query/: Cargo.toml
crates/h5i-db-query/src/: aggregate_state.rs  asof.rs  finance.rs  functions.rs  gapfill.rs  latest.rs  leakage.rs  lib.rs  metrics.rs  predicate_cache.rs  provider.rs  pruning.rs  session.rs  sidecar.rs  tail.rs  udtf.rs
crates/h5i-db-query/tests/: asof_perf.rs  leakage.rs  query.rs  query_misc.rs
crates/h5i-db-ui/: Cargo.toml
crates/h5i-db-ui/assets/: index.html
crates/h5i-db-ui/src/: lib.rs
crates/h5i-db-ui/tests/: api.rs
docs/: CNAME  OPERATIONS.md  index.html  llms-full.txt  llms.txt
docs-src/api/: database.md  exceptions.md  index.md  results-and-plans.md
docs-src/manual/: agents.md  cli.md  concepts.md  index.md  installation.md  migrating-from-duckdb.md  quickstart.md  sql.md
docs-src/templates/: docs.css  page.html
docs/_static/: docs.css  docs.js  search-index.json
docs/api/: database.html  exceptions.html  index.html  results-and-plans.html
docs/cookbook/: index.html
docs/cookbook/00_fundamentals/: 01_quickstart.html  02_designing_market_data_schemas.html  03_ingestion_patterns.html  04_sql_tour_for_quants.html  05_time_travel_and_versioning.html  06_previewable_mutations.html  07_streaming_appends_and_tail.html  08_maintenance.html
docs/cookbook/01_market_data_engineering/: 01_ohlcv_bars.html  02_vwap_twap_execution.html  03_gapfill_resample.html  04_asof_join_trades_quotes.html  05_corporate_actions.html  06_point_in_time_fundamentals.html  07_tick_data_cleaning.html  08_nbbo_consolidation.html
docs/cookbook/02_alpha_research/: 01_momentum_backtest.html  02_pairs_trading.html  03_ewma_vol_targeting.html  04_realized_volatility.html  05_factor_construction.html  06_event_study.html  07_order_flow_imbalance.html  08_intraday_seasonality.html  09_lead_lag.html  10_portfolio_rebalancing.html
docs/cookbook/03_risk_and_production/: 01_var_expected_shortfall.html  02_reproducible_backtests.html  03_eod_snapshots_audit.html  04_data_quality_gates.html  05_live_paper_trading_loop.html  06_multi_writer_conflicts.html  07_options_iv_surface.html  08_fx_crypto_24_7.html  09_fixed_income_curves.html  10_performance_tuning.html
docs/demo/: index.html
docs/demo/ui/: index.html
docs/manual/: agents.html  cli.html  concepts.html  index.html  installation.html  migrating-from-duckdb.html  operations.html  quickstart.html  sql.html
fuzz/: Cargo.toml
fuzz/fuzz_targets/: csv_ingest.rs  manifest_json.rs  sql_parse.rs
tools/: build_docs.py
