[workspace]
resolver = "2"
members = [
    "crates/h5i-db-observability",
    "crates/h5i-db-core",
    "crates/h5i-db-query",
    "crates/h5i-db-cli",
    "crates/h5i-db-bench",
    "crates/h5i-db-python",
    "crates/h5i-db-ui",
]
default-members = [
    "crates/h5i-db-core",
    "crates/h5i-db-query",
    "crates/h5i-db-cli",
    "crates/h5i-db-ui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/Koukyosyumei/h5i-db"
rust-version = "1.88"

[workspace.dependencies]
# version alongside path so `cargo publish` can rewrite these for crates.io.
h5i-db-core = { path = "crates/h5i-db-core", version = "0.1.0" }
h5i-db-query = { path = "crates/h5i-db-query", version = "0.1.0" }
h5i-db-observability = { path = "crates/h5i-db-observability", version = "0.1.0" }

# arrow/parquet must match the versions datafusion 54.1 links against (58.x).
arrow = { version = "58.3", default-features = false, features = [
    "csv",
    "ipc",
    "json",
    "prettyprint",
] }
arrow-schema = { version = "58.3", features = ["serde"] }
parquet = { version = "58.3", default-features = false, features = [
    "arrow",
    "async",
    "object_store",
    "zstd",
    "lz4",
    "snap",
    # Verify page-level CRCs on read when present. parquet-rs 58 cannot WRITE
    # page CRCs (the writer always emits crc: None), so our own segments rely
    # on manifest blake3 checksums (see read_segment_verified) instead.
    "crc",
] }
# Must match the object_store version parquet/datafusion link against.
object_store = { version = "0.13", features = ["aws"] }
datafusion = { version = "54.1", default-features = false, features = [
    "parquet",
    "sql",
    "datetime_expressions",
    "string_expressions",
    "regex_expressions",
    "unicode_expressions",
    "nested_expressions",
] }
datafusion-pruning = "54.1"
datafusion-datasource-parquet = "54.1"

tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "fs",
    "sync",
    "time",
    "signal",
] }
async-trait = "0.1"
futures = "0.3"
bytes = "1"

serde = { version = "1", features = ["derive"] }
# float_roundtrip: sidecar integrity checksums (aggregate states) verify by
# re-serializing parsed JSON, which requires parse∘serialize to be the
# identity for f64. serde_json's default float parse is lossy (~1 ulp), which
# made every full-mantissa aggregate state fail verification and rebuild.
serde_json = { version = "1", features = ["preserve_order", "float_roundtrip"] }

blake3 = "1"
fs4 = { version = "0.13", features = ["sync"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "serde",
] }
chrono-tz = "0.10"
url = "2"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"

tempfile = "3"
rand = "0.9"
clap = { version = "4", features = ["derive", "env"] }
comfy-table = "7"
anyhow = "1"

[patch.crates-io]
# DataFusion 54/Parquet 58 constrain `object_store` to 0.13, whose AWS
# feature pins vulnerable quick-xml 0.39. The 0.14 implementation preserves
# the API we consume and carries the fixed parser; this tiny compatibility
# package keeps the dependency identity expected by upstream crates.
object_store = { path = "compat/object-store-0.13" }

# No debuginfo in dev/test builds: DataFusion-sized debuginfo grows
# target/debug to tens of GB on this workspace. Agents debug with prints /
# tracing output instead of a debugger; flip locally if you need symbols.
[profile.dev]
debug = false

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.bench-fast]
inherits = "release"
lto = false
codegen-units = 16
panic = "unwind"

# Python wheels must be able to unwind so pyo3 can translate panics into
# Python exceptions instead of aborting the host interpreter (the release
# profile above is panic = "abort"). Selected by default via
# crates/h5i-db-python/pyproject.toml; build wheels with:
#   maturin build --profile wheel
[profile.wheel]
inherits = "release"
panic = "unwind"
