[package]
name = "h5i-db-cli"
description = "Non-interactive CLI for h5i-db"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "h5i-db"
path = "src/main.rs"

[dependencies]
h5i-db-core = { workspace = true }
h5i-db-query = { workspace = true }
arrow = { workspace = true }
parquet = { workspace = true }
datafusion = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
comfy-table = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[dependencies.humantime]
version = "2"

[dependencies.uuid]
workspace = true

[dependencies.bytes]
workspace = true
