[package]
name = "h5i-db-core"
description = "Versioned Arrow/Parquet storage kernel for h5i-db (no query engine dependency)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
arrow = { workspace = true }
arrow-schema = { workspace = true }
parquet = { workspace = true }
object_store = { workspace = true }

tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

blake3 = { workspace = true }
fs4 = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
rand = { workspace = true }
