[package]
name = "h5i-db-observability"
description = "Lightweight performance-report and workload-telemetry contracts for h5i-db"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
uuid = { workspace = true }
blake3 = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
