[package]
name = "h5i-db-python"
description = "Python bindings for h5i-db"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[lib]
name = "_native"
crate-type = ["cdylib"]

[dependencies]
h5i-db-core = { workspace = true }
h5i-db-query = { workspace = true }
arrow = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
pyo3 = { version = "0.29", features = ["abi3-py39"] }
