[build-system]
requires = ["maturin>=1.6,<2.0"]
build-backend = "maturin"

[project]
name = "h5i-db"
description = "Embedded versioned time-series database for quant workloads and AI agents"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
dependencies = ["pyarrow>=14"]
dynamic = ["version"]

[tool.maturin]
module-name = "h5i_db._native"
python-source = "python"
features = ["pyo3/extension-module"]
