[package]
name = "h5i-db-query"
description = "DataFusion query layer for h5i-db"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
h5i-db-core = { workspace = true }
arrow = { workspace = true }
parquet = { workspace = true }
object_store = { workspace = true }
datafusion = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
rand = { workspace = true }
