[package]
name = "h5i-db-ui"
description = "Local review UI for h5i-db: versions, snapshots, and mutation-plan approval"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
h5i-db-core = { workspace = true }
h5i-db-query = { workspace = true }
arrow = { workspace = true }
axum = "0.8"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }
tower = { version = "0.5", features = ["limit"] }
tower-http = { version = "0.6", features = ["trace"] }

[dev-dependencies]
tempfile = { workspace = true }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
